1st and 2nd solve methods

--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ button[value="5"]{
   color: maroon;
 }
 button[value="6"]{
-  color: turquoise;
+  color: deepskyblue;
 }
 button[value="7"]{
   color: black;
